src/objects/Product_Information__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>This Article Type will provide detail and communicate ALL necessary information for each LZ product</description>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>For manual entry of due date by content developer</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External__c</fullName>
        <label>External Links</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ__c</fullName>
        <label>FAQ</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Process_Overview__c</fullName>
        <label>Fulfillment Process Overview</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Info_Required_to_Fulfill__c</fullName>
        <label>Info Required to Fulfill</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Info_Required_to_Process__c</fullName>
        <description>Info required to process this product</description>
        <label>Info Required to Process</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <label>Internal Links</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Package_Types__c</fullName>
        <inlineHelpText>Package types for Products</inlineHelpText>
        <label>Package Types/Details</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Overview__c</fullName>
        <label>Product Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Purpose of the product info</description>
        <label>Purpose</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reminders_Quick_Tips__c</fullName>
        <description>Product info reminders and quick tips</description>
        <label>Reminders/Quick-Tips</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Product Info</label>
    <pluralLabel>Product Info</pluralLabel>
</CustomObject>